--- a/google_flickr_api/Content/style.css
+++ b/google_flickr_api/Content/style.css
@@ -4,4 +4,24 @@ html {
 }
 #map {
   height: 100%;
+  width: 80%;
+}
+@media (max-width: 768px) {
+  #map {
+    height: 80%;
+    width: 100%;
+  }
+}
+#map .photo {
+  border-radius: 3px;
+  max-width: 100% !important;
+}
+#photo-window {
+  width: 20%;
+}
+@media (max-width: 768px) {
+  #photo-window {
+    height: 20%;
+    width: 100%;
+  }
 }
