--- a/google_flickr_api/Content/style.less
+++ b/google_flickr_api/Content/style.less
@@ -4,4 +4,24 @@
 
 #map {
     height: 100%;
+    width: 80%;
+
+    @media (max-width: 768px) {
+        height: 80%;
+        width: 100%;
+    }
+
+    .photo {
+        border-radius: 3px;
+        max-width: 100% !important;
+    }
+}
+
+#photo-window {
+    width: 20%;
+
+    @media (max-width: 768px) {
+        height: 20%;
+        width: 100%;
+    }
 }
