--- a/google_flickr_api/Content/style.css
+++ b/google_flickr_api/Content/style.css
@@ -4,24 +4,57 @@ html {
 }
 #map {
   height: 100%;
-  width: 80%;
 }
 @media (max-width: 768px) {
   #map {
-    height: 80%;
     width: 100%;
+    height: 80%;
   }
 }
 #map .photo {
   border-radius: 3px;
   max-width: 100% !important;
 }
-#photo-window {
-  width: 20%;
+#photos-window {
+  height: 100%;
+  overflow-y: scroll;
+  background-color: #000000;
+  color: #ffffff;
 }
-@media (max-width: 768px) {
-  #photo-window {
-    height: 20%;
-    width: 100%;
-  }
+#photos-window #search {
+  position: relative;
+}
+#photos-window #search input {
+  border: 0;
+  border-radius: 25px;
+  width: 100%;
+  height: 30px;
+  padding: 0 35px 0 15px;
+  font-size: 20px;
+  color: #000000;
+}
+#photos-window #search i {
+  position: absolute;
+  top: 3px;
+  right: 10px;
+  color: #000000;
+  font-size: 23px;
+}
+#photos-window #photos {
+  margin-top: 20px;
+}
+#photos-window #photos .photo {
+  width: 100%;
+  height: 200px;
+  background-position: center;
+  cursor: pointer;
+}
+#photos-window #photos .photo-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: .7;
+}
+#photos-window #photos .photo-overlay:hover {
+  opacity: 0;
 }
