--- a/google_flickr_api/Content/style.less
+++ b/google_flickr_api/Content/style.less
@@ -4,11 +4,10 @@
 
 #map {
     height: 100%;
-    width: 80%;
 
     @media (max-width: 768px) {
-        height: 80%;
         width: 100%;
+        height: 80%;
     }
 
     .photo {
@@ -17,11 +16,53 @@
     }
 }
 
-#photo-window {
-    width: 20%;
+#photos-window {
+    height: 100%;
+    overflow-y: scroll;
+    background-color: #000000;
+    color: #ffffff;
 
-    @media (max-width: 768px) {
-        height: 20%;
-        width: 100%;
+    #search {
+        position: relative;
+
+        input {
+            border: 0;
+            border-radius: 25px;
+            width: 100%;
+            height: 30px;
+            padding: 0 35px 0 15px;
+            font-size: 20px;
+            color: #000000;
+        }
+
+        i {
+            position: absolute;
+            top: 3px;
+            right: 10px;
+            color: #000000;
+            font-size: 23px;
+        }
+    }
+
+    #photos {
+        margin-top: 20px;
+
+        .photo {
+            width: 100%;
+            height: 200px;
+            background-position: center;
+            cursor: pointer;
+        }
+
+        .photo-overlay {
+            width: 100%;
+            height: 100%;
+            background-color: #000000;
+            opacity: .7;
+
+            &:hover {
+                opacity: 0;
+            }
+        }
     }
 }
