--- a/google_flickr_api/Content/style.less
+++ b/google_flickr_api/Content/style.less
@@ -1,68 +1,192 @@
-﻿body, html {
-    height: 100%;
-}
+﻿@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
 
-#map {
+body, html {
     height: 100%;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    background: #111111;
+    color: #e0e0e0;
 
     @media (max-width: 768px) {
-        width: 100%;
-        height: 80%;
-    }
-
-    .photo {
-        border-radius: 3px;
-        max-width: 100% !important;
+        font-size: 13px;
     }
 }
 
-#photos-window {
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.625em;
+}
+
+h3 {
+    font-size: 1.375em;
+}
+
+h4 {
+    font-size: 1.125em;
+}
+
+#start-page {
     height: 100%;
-    overflow-y: scroll;
-    background-color: #000000;
-    color: #ffffff;
+    text-align: center;
 
-    #search {
+    #start-search {
+        padding: 10px;
         position: relative;
+        top: 50%;
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
 
-        input {
-            border: 0;
-            border-radius: 25px;
-            width: 100%;
-            height: 30px;
-            padding: 0 35px 0 15px;
-            font-size: 20px;
-            color: #000000;
+        .search {
+            margin: 0 auto;
+            width: 50%;
+        }
+    }
+}
+
+#header {
+    position: relative;
+    z-index: 10;
+    height: 65px;
+    -webkit-box-shadow: -1px 1px 11px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 1px 11px 1px rgba(0,0,0,0.75);
+    box-shadow: -1px 1px 11px 1px rgba(0,0,0,0.75);
+
+    @media (max-width: 768px) {
+        height: 145px;
+        text-align: center;
+
+        .title, .search{
+            float: none !important;
         }
 
-        i {
-            position: absolute;
-            top: 3px;
-            right: 10px;
-            color: #000000;
-            font-size: 23px;
+        .search {
+            display: inline-block !important;
+            width: 69%;
+        }
+
+        #load-more-mobile{
+            display: inline-block !important;
+            width: 29%
         }
     }
 
-    #photos {
+    h1, p {
+        display: inline-block;
+    }
+
+    .title {
+        float: left;
+    }
+
+    .search {
+        float: right;
         margin-top: 20px;
+    }
+
+    #load-more-mobile {
+        display: none;
+    }
+}
+
+#map-content {
+    height: calc(~'100% - 65px');
+
+    @media (max-width: 768px) {
+        height: calc(~'100% - 145px');
+    }
+
+    #map {
+        height: 100%;
 
         .photo {
-            width: 100%;
-            height: 200px;
-            background-position: center;
-            cursor: pointer;
+            border-radius: 3px;
+            max-width: 100% !important;
+        }
+    }
+
+    #photos-window {
+        @media (max-width: 768px) {
+            display: none;
         }
 
-        .photo-overlay {
-            width: 100%;
-            height: 100%;
-            background-color: #000000;
-            opacity: .7;
+        height: 100%;
+        overflow-y: scroll;
+        background-color: #000000;
+        color: #ffffff;
 
-            &:hover {
-                opacity: 0;
+        .no-results {
+            margin-top: 20px;
+        }
+
+        #photos {
+            position: relative;
+            z-index: 1;
+
+            .photo {
+                width: 100%;
+                height: 200px;
+                background-position: center;
+                cursor: pointer;
+            }
+
+            .photo-overlay {
+                width: 100%;
+                height: 100%;
+                background-color: #000000;
+                opacity: .7;
+                transition: .3s all linear;
+
+                &:hover, &.active-photo {
+                    opacity: 0;
+                }
             }
         }
+
+        #load-more {
+            z-index: 5;
+            position: fixed;
+            bottom: 0;
+            background: #111111;
+            margin: 0 auto;
+            text-align: center;
+            right: 17px;
+            padding: 0 44px;
+            cursor: pointer;
+        }
+    }
+}
+
+.search {
+    position: relative;
+
+    input {
+        border: 0;
+        border-radius: 25px;
+        width: 100%;
+        height: 30px;
+        padding: 0 35px 0 15px;
+        font-size: 20px;
+        color: #000000;
+    }
+
+    i {
+        position: absolute;
+        top: 3px;
+        right: 10px;
+        color: #000000;
+        font-size: 23px;
     }
 }
